--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,51 @@
-.App {
-  text-align: center;
-}
 
+body{
+  margin-bottom: 250px;
+  background-image:url(./clock-bg\ \(1\).jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: auto;
+  height:auto;
+  opacity:80%;
+  filter:grayscale(20%);
+}
+input{
+
+ text-align: center;
+ font-size: 20px;
+  height:20px;
+  border-radius: 10px;
+}
+.tim h1,form{
+text-align: center;
+}
+.tim{
+  opacity: 100%;
+}
+ button{
+height:25px;
+width:100px;
+background-color:rgb(185, 4, 4);
+}
+.tow{
+  display: flex;
+  justify-content: center;
+  gap:100px;
+
+}
+.tow h3{
+  font-size:35px;
+  font-family: monospace;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+.conver{
+
+  display: flex;
+  justify-content: space-evenly;
+ 
 }
 
 @media (prefers-reduced-motion: no-preference) {
